Make sure profile photos fill their space, even if it means a little stretching.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -31,6 +31,7 @@
 
     img {
         height: 100%;
+        width: 100%;
     }
 }
 
